--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,23 @@
+
+env:
+  global:
+    - CC_TEST_REPORTER_ID=<1f8856db32cd3c6055947644939e2aa020a6687326ffa938f20ba73167bea6e9>
+
+before_install:
+  - gem install bundler
+
+notifications:
+  - false
+
 language: ruby
 rvm:
   - 2.6.0
+
+before_script:
+- curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+- chmod +x ./cc-test-reporter
+- ./cc-test-reporter before-build
 script:
   - bundle exec rspec spec
+after_script:
+- ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
