Travis, Coveralls and CodeClimate badges

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,3 @@
-
-env:
-  global:
-    - CC_TEST_REPORTER_ID=<1f8856db32cd3c6055947644939e2aa020a6687326ffa938f20ba73167bea6e9>
-
 before_install:
   - gem install bundler
 
@@ -13,11 +8,7 @@ language: ruby
 rvm:
   - 2.6.0
 
-before_script:
-- curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-- chmod +x ./cc-test-reporter
-- ./cc-test-reporter before-build
 script:
   - bundle exec rspec spec
 after_script:
-- ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - bundle exec rake coveralls:push
